{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 78,
  "lineage": "5a4c5afb-ff8b-6e3e-d97c-eaa7c9dfadc3",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "mtclab-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Network/publicIPAddresses/mtclab-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.121.108.248",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mtclab-ip",
            "resource_group_name": "mtclab-resources",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtclab-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Network/networkInterfaces/mtclab-nic",
            "internal_domain_name_suffix": "3locw0x3aykebdzza1wjfdb4je.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Network/publicIPAddresses/mtclab-ip",
                "subnet_id": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Network/virtualNetworks/mtclab-network/subnets/mtclab-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "60-45-BD-D2-F5-B3",
            "name": "mtclab-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "mtclab-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Compute/virtualMachines/mtclab-vm"
          },
          "dependencies": [
            "azurerm_public_ip.mtclab-ip",
            "azurerm_resource_group.mtclab-rg",
            "azurerm_subnet.mtclab-subnet",
            "azurerm_virtual_network.mtclab-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtclab-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Network/networkSecurityGroups/mtclab-sg",
            "location": "eastus",
            "name": "mtclab-sg",
            "resource_group_name": "mtclab-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mtclab-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mtclab-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtclab-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Network/networkSecurityGroups/mtclab-sg/securityRules/mtclab-dev-rule",
            "name": "mtclab-dev-rule",
            "network_security_group_name": "mtclab-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mtclab-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtclab-sg",
            "azurerm_resource_group.mtclab-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtclab-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Network/publicIPAddresses/mtclab-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.121.108.248",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mtclab-ip",
            "resource_group_name": "mtclab-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtclab-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtclab-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Network/virtualNetworks/mtclab-network/subnets/mtclab-subnet",
            "name": "mtclab-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mtclab-resources",
            "virtual_network_name": "mtclab-network"
          },
          "dependencies": [
            "azurerm_resource_group.mtclab-rg",
            "azurerm_virtual_network.mtclab-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mtclab-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Network/virtualNetworks/mtclab-network/subnets/mtclab-subnet",
            "network_security_group_id": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Network/networkSecurityGroups/mtclab-sg",
            "subnet_id": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Network/virtualNetworks/mtclab-network/subnets/mtclab-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.mtclab-sg",
            "azurerm_resource_group.mtclab-rg",
            "azurerm_subnet.mtclab-subnet",
            "azurerm_virtual_network.mtclab-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtclab-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6a2bdcea-06fd-4014-8f39-06ec928c3e4c",
            "id": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Network/virtualNetworks/mtclab-network",
            "location": "eastus",
            "name": "mtclab-network",
            "resource_group_name": "mtclab-resources",
            "subnet": [
              {
                "address_prefixes": [
                  "10.123.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Network/virtualNetworks/mtclab-network/subnets/mtclab-subnet",
                "name": "mtclab-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/a4c2f38b-78ba-42c2-8ff5-c618899339c5/resourceGroups/mtclab-resources/providers/Microsoft.Network/networkSecurityGroups/mtclab-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtclab-rg"
          ]
        }
      ]
    }
  ]
}